# pixonixsdf

./: .gitignore  COMPLETION_SUMMARY.md  CPP_PORT_COMPLETION.md  CPP_PORT_SUMMARY.md  CSHARP_PORT_SUMMARY.md  PORTING-SUMMARY.md  README-CSharp.md  README.md  SDF.sln  TASK_COMPLETION_REPORT.md
SDF.CSharp/: Constants.cs  Core.cs  MarchingCubes.cs  MeshGenerator.cs  Operations.cs  Primitives.cs  SDF.csproj  SDF3.cs  SDF3Extensions.cs  StlWriter.cs  Vector3.cs
SDF.Cpp/: CMakeLists.txt  README.md
SDF.Cpp/cmake/: SDFConfig.cmake.in
SDF.Cpp/examples/: CMakeLists.txt  csg_example.cpp  operations_example.cpp  simple_example.cpp
SDF.Cpp/include/sdf/: Constants.h  MarchingCubes.h  MeshGenerator.h  Operations.h  Primitives.h  SDF3.h  StlWriter.h  Vector3.h
SDF.Cpp/src/: MarchingCubes.cpp  MeshGenerator.cpp  Operations.cpp  Primitives.cpp  SDF3.cpp  StlWriter.cpp  Vector3.cpp
SDF.Examples/: AdvancedExample.cs  CSGExample.cs  ComprehensiveExamples.cs  Program.cs  README.md  SDF.Examples.csproj  SimpleTest.cs  TransformExample.cs  TwistedBoxExample.cs
SDF.Python/: CMakeLists.txt  README.md  bindings.cpp  example.py  setup.py
